--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -7,9 +7,12 @@ numpy>=1.21.0
 tensorflow>=2.10.0  # For Keras models
 # torch>=2.0.0      # For PyTorch models (alternative)
 
+# Clustering (for unsupervised learning)
+scikit-learn>=1.0.0  # For K-means, DBSCAN, PCA, t-SNE
+
 # Optional: ONNX export
 # onnx>=1.12.0
 # onnxruntime>=1.12.0
 
-# Visualization (for visualize.py)
+# Visualization (for visualize.py and clustering)
 matplotlib>=3.5.0
