--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,2 @@
 data/GAMBIT/*.json filter=lfs diff=lfs merge=lfs -text
-visualizations/**/*.png filter=lfs diff=lfs merge=lfs -text
-visualizations/*.png filter=lfs diff=lfs merge=lfs -text
-visualizations/session-data.js filter=lfs diff=lfs merge=lfs -text
+visualizations/* filter=lfs diff=lfs merge=lfs -text
