--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 data/GAMBIT/*.json filter=lfs diff=lfs merge=lfs -text
-visualizations/* filter=lfs diff=lfs merge=lfs -text
+visualizations/** filter=lfs diff=lfs merge=lfs -text
