--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc --noEmit && vite build",
+    "build": "tsc --noEmit && eslint . && vite build",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
     "test": "npx playwright test",
@@ -36,8 +38,12 @@
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
+    "@types/three": "^0.182.0",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
     "@vercel/node": "^5.5.15",
     "dotenv": "^17.2.3",
+    "eslint": "^9.39.2",
     "typescript": "^5.9.3",
     "vite": "^7.3.0"
   }
